--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "web-push": "^3.4.4"
   },
   "devDependencies": {
+    "@babel/preset-env": "~7.12.0",
     "@nuxt/types": "2.14.12",
     "@nuxt/typescript-build": "2.0.3",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
