--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "@nuxtjs/sentry": "^4.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "aos": "^2.3.4",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
+    "dayjs": "^1.10.4",
     "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
     "jquery": "^3.5.1",
-    "moment": "^2.29.1",
+    "lodash": "^4.17.21",
     "nanoid": "^3.1.20",
     "nuxt": "2.14.12",
     "nuxt-facebook-pixel-module": "^1.5.0",
@@ -41,7 +43,9 @@
     "sass-loader": "^10.1.0",
     "vue": "^2.6.12",
     "vue-autofocus-directive": "^1.0.4",
+    "vue-fragment": "^1.5.2",
     "vue-functional-calendar": "^2.9.1",
+    "vue-lottie": "^0.2.1",
     "vue-scrollto": "^2.20.0",
     "vue-social-sharing": "^3.0.4",
     "vue2-datepicker": "^3.8.2",
@@ -55,6 +59,8 @@
     "@nuxt/typescript-build": "2.0.3",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/pwa": "^3.3.4",
-    "eslint": "7.16.0"
+    "@types/lodash": "^4.14.168",
+    "eslint": "7.16.0",
+    "typescript-plugin-css-modules": "^3.2.0"
   }
 }
