--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@nuxt/typescript-build": "2.0.3",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/pwa": "^3.3.4",
+    "@nuxtjs/style-resources": "^1.0.0",
     "@types/lodash": "^4.14.168",
     "eslint": "7.16.0",
     "typescript-plugin-css-modules": "^3.2.0"
