--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
+    "lottie-web": "^5.7.6",
     "nanoid": "^3.1.20",
     "nuxt": "2.14.12",
     "nuxt-facebook-pixel-module": "^1.5.0",
@@ -45,7 +46,6 @@
     "vue-autofocus-directive": "^1.0.4",
     "vue-fragment": "^1.5.2",
     "vue-functional-calendar": "^2.9.1",
-    "vue-lottie": "^0.2.1",
     "vue-scrollto": "^2.20.0",
     "vue-social-sharing": "^3.0.4",
     "vue2-datepicker": "^3.8.2",
