--- a/package.json
+++ b/package.json
@@ -19,15 +19,10 @@
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sentry": "^4.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
-    "aos": "^2.3.4",
     "axios": "^0.21.1",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.5.3",
-    "bootstrap-vue": "^2.21.2",
     "dayjs": "^1.10.4",
     "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
-    "jquery": "^3.5.1",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.6",
     "nanoid": "^3.1.20",
@@ -37,31 +32,30 @@
     "nuxt-imagemin": "^1.0.0",
     "nuxt-maintenance-mode": "^0.3.1",
     "nuxt-property-decorator": "^2.8.8",
-    "nuxt-purgecss": "^1.0.0",
     "nuxt-social-meta": "0.0.5",
     "prismic-dom": "^2.1.0",
     "prismic-vue": "^1.3.0",
     "sass": "^1.32.2",
     "sass-loader": "^10.1.0",
+    "smoothscroll-polyfill": "^0.4.4",
+    "swiper": "^6.5.0",
     "vue": "^2.6.12",
-    "vue-autofocus-directive": "^1.0.4",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-fragment": "^1.5.2",
-    "vue-functional-calendar": "^2.9.1",
     "vue-scrollto": "^2.20.0",
     "vue-social-sharing": "^3.0.4",
-    "vue2-datepicker": "^3.8.2",
-    "vue2-daterange-picker": "^0.6.3",
-    "vuelendar": "^1.0.15",
     "web-push": "^3.4.4"
   },
   "devDependencies": {
     "@babel/preset-env": "~7.12.0",
-    "@nuxt/types": "2.14.12",
+    "@nuxt/image": "^0.4.1",
+    "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "2.0.3",
     "@nuxtjs/eslint-config-typescript": "5.0.0",
     "@nuxtjs/pwa": "^3.3.4",
     "@nuxtjs/style-resources": "^1.0.0",
     "@types/lodash": "^4.14.168",
+    "@types/smoothscroll-polyfill": "^0.3.1",
     "eslint": "7.16.0",
     "typescript-plugin-css-modules": "^3.2.0"
   }
