--- a/.gitignore
+++ b/.gitignore
@@ -7,12 +7,13 @@ npm-debug.log
 # Nuxt build
 .nuxt
 
+# Vercel Dev
+.vercel
+
 # Nuxt generate
 dist
 .DS_Store
 .idea
-
-.vercel
 
 # Just in case
 .env
