--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "sourceMap": true,
     "strict": true,
     "noEmit": true,
+    "allowJs": true,
     "baseUrl": ".",
     "importsNotUsedAsValues": "preserve",
     "resolveJsonModule": true,
