--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@nuxtjs/robots": "^2.4.2",
     "@nuxtjs/sentry": "^4.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
+    "@types/js-cookie": "^2.2.6",
     "axios": "^0.21.1",
     "dayjs": "^1.10.4",
     "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.6",
     "nanoid": "^3.1.20",
