--- a/package.json
+++ b/package.json
@@ -4,61 +4,55 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev": "nuxt-ts",
-    "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
-    "generate": "nuxt-ts generate",
-    "now-build": "nuxt-ts generate",
+    "dev": "nuxt",
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "lint": "eslint --max-warnings 0 --ext .ts,.vue ."
   },
   "dependencies": {
     "@nuxt/content": "^1.14.0",
-    "@nuxt/typescript-runtime": "2.0.0",
     "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/gtm": "^2.4.0",
-    "@nuxtjs/prismic": "^1.2.4",
-    "@nuxtjs/robots": "^2.4.2",
-    "@nuxtjs/sentry": "^4.5.0",
+    "@nuxtjs/prismic": "^1.2.6",
+    "@nuxtjs/robots": "^2.5.0",
+    "@nuxtjs/sentry": "^5.0.3",
     "@nuxtjs/sitemap": "^2.4.0",
-    "@types/js-cookie": "^2.2.6",
     "dayjs": "^1.10.4",
     "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
-    "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
-    "lottie-web": "^5.7.6",
-    "nanoid": "^3.1.20",
-    "nuxt": "2.14.12",
+    "lottie-web": "^5.7.7",
+    "nanoid": "^3.1.22",
+    "nuxt": "2.15.4",
     "nuxt-facebook-pixel-module": "^1.5.0",
-    "nuxt-i18n": "^6.18.0",
+    "nuxt-i18n": "^6.22.3",
     "nuxt-imagemin": "^1.0.0",
     "nuxt-maintenance-mode": "^0.3.1",
-    "nuxt-property-decorator": "^2.8.8",
+    "nuxt-property-decorator": "^2.9.1",
     "nuxt-social-meta": "0.0.5",
-    "prismic-dom": "^2.1.0",
-    "prismic-vue": "^1.3.0",
-    "sass": "^1.32.2",
-    "sass-loader": "^10.1.0",
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
     "smoothscroll-polyfill": "^0.4.4",
-    "swiper": "^6.5.0",
+    "swiper": "^6.5.3",
     "vue": "^2.6.12",
     "vue-awesome-swiper": "^4.1.1",
     "vue-fragment": "^1.5.2",
     "vue-scrollto": "^2.20.0",
-    "vue-social-sharing": "^3.0.4",
+    "vue-social-sharing": "^3.0.7",
     "web-push": "^3.4.4"
   },
   "devDependencies": {
-    "@babel/preset-env": "~7.12.0",
+    "@babel/preset-env": "~7.13.12",
     "@nuxt/image": "^0.4.1",
-    "@nuxt/types": "^2.15.3",
-    "@nuxt/typescript-build": "2.0.3",
-    "@nuxtjs/eslint-config-typescript": "5.0.0",
-    "@nuxtjs/pwa": "^3.3.4",
+    "@nuxt/types": "^2.15.4",
+    "@nuxt/typescript-build": "2.1.0",
+    "@nuxtjs/eslint-config-typescript": "6.0.0",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.0.0",
     "@types/lodash": "^4.14.168",
     "@types/smoothscroll-polyfill": "^0.3.1",
-    "eslint": "7.16.0",
+    "eslint": "7.23.0",
     "typescript-plugin-css-modules": "^3.2.0"
   }
 }
