--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
+    "now-build": "nuxt generate",
     "lint": "eslint --max-warnings 0 --ext .ts,.vue ."
   },
   "dependencies": {
