--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build",
+    "build": "nuxt generate",
     "start": "nuxt start",
     "generate": "nuxt generate",
-    "now-build": "nuxt generate",
     "lint": "eslint --max-warnings 0 --ext .ts,.vue ."
   },
   "dependencies": {
