--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sentry": "^5.0.3",
     "@nuxtjs/sitemap": "^2.4.0",
+    "animejs": "^3.2.1",
     "dayjs": "^1.10.4",
     "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
@@ -51,6 +52,7 @@
     "@nuxtjs/eslint-config-typescript": "6.0.0",
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.0.0",
+    "@types/animejs": "^3.1.3",
     "@types/lodash": "^4.14.168",
     "@types/smoothscroll-polyfill": "^0.3.1",
     "eslint": "7.23.0",
