--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
     "smoothscroll-polyfill": "^0.4.4",
+    "swagger-ui": "^3.46.0",
     "swiper": "^6.5.3",
     "vue": "^2.6.12",
     "vue-awesome-swiper": "^4.1.1",
