--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dayjs": "^1.10.4",
     "emailjs-com": "^2.6.4",
     "express": "^4.17.1",
+    "jspdf": "^2.3.1",
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.7",
     "nanoid": "^3.1.22",
