--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nuxt-property-decorator": "^2.9.1",
     "sass": "^1.32.8",
     "sass-loader": "^10.1.1",
+    "signature_pad": "^3.0.0-beta.4",
     "smoothscroll-polyfill": "^0.4.4",
     "swagger-ui": "^3.46.0",
     "swiper": "^6.5.3",
@@ -54,6 +55,7 @@
     "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/style-resources": "^1.0.0",
     "@types/animejs": "^3.1.3",
+    "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.14.168",
     "@types/smoothscroll-polyfill": "^0.3.1",
     "eslint": "7.23.0",
