--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "dev:api": "vc dev -A vercel.dev.json",
     "build": "nuxt build",
     "start": "nuxt start",
     "generate": "nuxt generate",
@@ -49,7 +50,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "~7.13.12",
-    "@nuxt/image": "^0.4.1",
+    "@nuxt/image": "^0.4.6",
     "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "2.1.0",
     "@nuxtjs/eslint-config-typescript": "6.0.0",
@@ -61,6 +62,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.41",
     "@types/smoothscroll-polyfill": "^0.3.1",
+    "@vercel/node": "^1.10.0",
     "eslint": "7.23.0",
     "typescript-plugin-css-modules": "^3.2.0"
   }
