--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.41",
     "@types/smoothscroll-polyfill": "^0.3.1",
+    "@vercel/build-utils": "^2.10.2",
     "@vercel/node": "^1.10.0",
     "eslint": "7.23.0",
     "typescript-plugin-css-modules": "^3.2.0"
