--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
       }
     },
     {
-      "src": "api/**/*.ts",
+      "src": "api/**/*.js",
       "use": "@vercel/node"
     }
   ],
@@ -20,11 +20,11 @@
     },
     {
       "src": "/api/newsletter/(.*)",
-      "dest": "api/newsletter/$1.ts"
+      "dest": "api/newsletter/$1.js"
     },
     {
       "src": "/api",
-      "dest": "api/index.ts"
+      "dest": "api/index.js"
     },
     {
       "src": "/(.*)",
