--- a/vercel.json
+++ b/vercel.json
@@ -15,12 +15,12 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/$1.ts"
-    },
-    {
       "src": "/api/newsletter/(.*)",
       "dest": "api/newsletter/$1.js"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "api/$1.js"
     },
     {
       "src": "/api",
