changed to IPX, added content to server files

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,11 @@
       "src": "nuxt.config.ts",
       "use": "@nuxtjs/vercel-builder",
       "config": {
-        "serverFiles": ["server-middleware/**"]
+        "serverFiles": [
+          "server-middleware/**",
+          ".nuxt/content/**",
+          "content/**"
+        ]
       }
     },
     {
