--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nuxt",
     "dev:api": "vc dev -A vercel.dev.json",
-    "build": "nuxt build",
+    "build": "nuxt generate",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --max-warnings 0 --ext .ts,.vue ."
