Rebranding, added customer stories, updated config, added global components, rebranding illustrations etc

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-BASE_URL=https://www.digital-hotel.net
-APP_URL=https://app.digital-hotel.net
+BASE_URL=https://oktus.io
+APP_URL=https://app.oktus.io
