--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "digital-hotel-net-website",
-  "description": "Digital Hotel Website",
+  "name": "oktus-website",
+  "description": "oktus – marketing website",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -22,6 +22,7 @@
     "lottie-web": "^5.7.7",
     "nanoid": "^3.1.22",
     "nuxt": "2.15.4",
+    "nuxt-content-git": "^2.0.3",
     "nuxt-facebook-pixel-module": "^1.5.0",
     "nuxt-i18n": "^6.22.3",
     "nuxt-imagemin": "^1.0.0",
