--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "~7.13.12",
+    "@now/build-utils": "^2.7.0",
     "@nuxt/image": "^0.4.7",
     "@nuxt/types": "^2.15.4",
     "@nuxt/typescript-build": "2.1.0",
