--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "lodash": "^4.17.21",
+    "typescript": "^4.2.4",
     "typescript-plugin-css-modules": "^3.2.0"
   }
 }
