[test] updated config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "allowJs": true,
     "sourceMap": true,
+    "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
     "baseUrl": ".",
@@ -24,5 +25,6 @@
       "@vercel/node"
     ]
   },
+  "include": ["**/*.ts"],
   "exclude": ["node_modules"]
 }
