--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,13 +17,7 @@
       "~/*": ["./*"],
       "@/*": ["./*"]
     },
-    "types": [
-      "@types/node",
-      "@nuxt/types",
-      "@nuxtjs/axios",
-      "nuxt-i18n",
-      "@vercel/node"
-    ]
+    "types": ["@types/node", "@nuxt/types", "@nuxtjs/axios", "nuxt-i18n"]
   },
   "include": ["**/*.ts"],
   "exclude": ["node_modules"]
